Fix Chart.js collapsing to 0x0 in flex containers

--- a/style2.css
+++ b/style2.css
@@ -662,9 +662,7 @@ input[type="number"]::-webkit-inner-spin-button {
     max-width: 320px;
     aspect-ratio: 1;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
     margin: 0 auto;
 }
 
@@ -694,6 +692,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .chart-center-label {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
